# docs/swagger.json
@@ -19,11 +19,48 @@
                 }
             }
         },
-        "/user/getUserList": {
-            "get": {
+        "/user/createUser": {
+            "post": {
                 "tags": [
-                    "首页"
+                    "用户模块"
                 ],
+                "summary": "新增用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "确认密码",
+                        "name": "repassword",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\", \"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/getUserList": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "所有用户",
                 "responses": {
                     "200": {
                         "description": "code\", \"message\"}",
